snapshot-tests/tests/snapshots/parser__bad_floats__trailing_dec.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[invalid-float]: 
  ┌─ trailing_dec:1:7
  │
1 │ a = 0.
  │       ^ invalid float: nothing after decimal point
